<resources>
    <string name="app_name">My Recipes</string>
    <string name="recipes_fragment">Recipes</string>
    <string name="favourite_recipes_fragment">Favourites</string>
    <string name="food_joke_fragment">Joke</string>
    <string name="floating_icon_button_for_restaurant">Floating icon button for restaurant</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="image_view_no_internet_connection">Image view no internet connection</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and Lorem Ipsum has been.0s with the release of Letraset.</string>
    <string name="hundred">100</string>

    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="finger_food">Finger Food</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="diet_type">Diet Type</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>

    <string name="recipe_overview_image">Recipe overview image</string>
    <string name="recipe_name_placeholder">Recipe Name</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="healthy">Healthy</string>
    <string name="cheap">Cheap</string>
    <string name="description">Description</string>
    <string name="grams">Grams</string>
    <string name="consistency">Consistency</string>
    <string name="original">Original</string>
    <string name="save_to_favourites">Save to Favourites</string>
    <string name="no_favourite_recipes">No favourite recipes</string>
    <string name="delete_favourite_recipe">Delete Favourite Recipe</string>
    <string name="share_food_trivia">Share Food Trivia</string>
    <string name="my_recipes">My Recipes</string>
    <string name="confirm_deletion">CONFIRM DELETION</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="no_recipes_found">No recipes found</string>

</resources>