<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.fragments.recipes.RecipesBottomSheetFragment">

    <TextView
        android:id="@+id/tvMealType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/meal_type"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/scrollViewMealType"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMealType">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupMealType"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:checkedChip="@+id/chipMainCourse"
                app:selectionRequired="true"
                app:singleSelection="true"
                app:singleLine="true" >

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMainCourse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_course"
                    style="@style/CustomChipStyle" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMealSideDish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/side_dish"
                    style="@style/CustomChipStyle" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMealDessert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dessert"
                    style="@style/CustomChipStyle" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMealAppetizer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appetizer"
                    style="@style/CustomChipStyle" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMealSalad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/salad"
                    style="@style/CustomChipStyle" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMealBread"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bread"
                    style="@style/CustomChipStyle" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMealBreakfast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breakfast"
                    style="@style/CustomChipStyle" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMealSoup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/soup"
                    style="@style/CustomChipStyle" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMealBeverage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beverage"
                    style="@style/CustomChipStyle" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMealSauce"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sauce"
                    style="@style/CustomChipStyle" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMealMarinade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/marinade"
                    style="@style/CustomChipStyle" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMealFingerFood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/finger_food"
                    style="@style/CustomChipStyle" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMealSnack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/snack"
                    style="@style/CustomChipStyle" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMealDrink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/drink"
                    style="@style/CustomChipStyle" />

            </com.google.android.material.chip.ChipGroup>

        </LinearLayout>

    </HorizontalScrollView>

    <TextView
        android:id="@+id/tvDietType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/diet_type"
        android:textColor="@color/dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollViewMealType" />

    <HorizontalScrollView
        android:id="@+id/scrollViewDietType"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDietType">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupDietType"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:checkedChip="@+id/chipDietGlutenFree"
                app:selectionRequired="true"
                app:singleSelection="true"
                app:singleLine="true" >

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipDietGlutenFree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gluten_free"
                    style="@style/CustomChipStyle" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipDietKetogenic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ketogenic"
                    style="@style/CustomChipStyle" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipDietVegetarian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vegetarian"
                    style="@style/CustomChipStyle" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipDietVegan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vegan"
                    style="@style/CustomChipStyle" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipDietPescetarian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pescetarian"
                    style="@style/CustomChipStyle" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipDietPaleo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paleo"
                    style="@style/CustomChipStyle" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipDietPrimal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/primal"
                    style="@style/CustomChipStyle" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipDietWhole30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/whole30"
                    style="@style/CustomChipStyle" />

            </com.google.android.material.chip.ChipGroup>

        </LinearLayout>

    </HorizontalScrollView>

    <Button
        android:id="@+id/btnApply"
        android:layout_width="match_parent"
        android:layout_height="60dp"

        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/apply"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollViewDietType" />

</androidx.constraintlayout.widget.ConstraintLayout>